tests/ui/github_closed_issue.stderr
error: issue https://github.com/KaiserKarel/issue/issues/2 has been closed
 --> $DIR/github_closed_issue.rs:3:16
  |
3 | #[issue::track(url="https://github.com/KaiserKarel/issue/issues/2")]
  |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
